Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -164,7 +164,7 @@ From NIST\footnote{See \url{https://www.nist.gov/pml/x-ray-mass-attenuation-coef
 \begin{figure}[H]
     \centering
     \includegraphics[scale=0.5]{images/attenuation_coef.png}
-    \caption{\small Something wise. Note that the x-axis is log scaled. The blue area is the typical range for commercial x-ray sources (10 keV - 200 keV). Each mark on the graph is a data point from NIST and the lines are calculated by linear interpolation.}
+    \caption{\small Something wise. Note that the x-axis is log scaled. The blue area is the typical range for commercial x-ray sources (10 keV - 200 keV). Each mark on the graph is a data point from NIST.}
     \label{fig:attenuation_coef}
 \end{figure}
 
